# Chip8

./: .gitignore  CMakeLists.txt  specs.txt
include/: chip_emulator.h  chip_glew.h  chip_glut.h  chip_memory.h  chip_opcodes.h  chip_sdl.h  chip_structs.h
include/glad/: glad.h
shaders/: fragment_shader.frag  vertex_shader.vert
src/: chip_emulator.c  chip_glew.c  chip_glut.c  chip_memory.c  chip_opcodes.c  chip_sdl.c  chip_structs.c  glad.c  main.c
